feat(alert): implement alert config management and fix lazy loading/security exceptions